--- a/views/public/index.pug
+++ b/views/public/index.pug
@@ -11,7 +11,7 @@ html
 					div(style='max-width: 60%;')
 						h1.title.is-size-1(style='line-height:1.5;') Turtle Me
 						h1.subtitle.is-size-2.has-text-weight-light.has-background-white(style='line-height:1.4;padding:15px;')
-							| A virtual market place for creatives to sell and buy services in TurtleCoin. 
+							| A virtual marketplace for creatives to sell and buy services with TurtleCoin. 
 						
 						.buttons
 							a.button.is-large.is-primary.is-outlined.is-hidden-mobile(href='/register' style='font-size:1.8em;')
