--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -4,8 +4,11 @@ head
 	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-badge@2.0.0/dist/css/bulma-badge.min.css', integrity='sha256-I+C/Eup4TsatVcYF2m9S9U+J9HQTr4m58RqWwXwzbTo=', crossorigin='anonymous')
 	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-switch@2.0.0/dist/css/bulma-switch.min.css', integrity='sha256-jCV/cXwP13w0GNHLgFx6SFgTNAvJPvS5MIhuE30Ng08=', crossorigin='anonymous')
 	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-tooltip@2.0.2/dist/css/bulma-tooltip.min.css', integrity='sha256-4sEalG00AgYSQIYA/likT3rU/pElCgDfnyHz/mf+j30=', crossorigin='anonymous')
+	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/css/bulma-steps.min.css', integrity='sha256-2VMsFL68nak478Q553stUdMbocucF0+fqbGQeAc3KCU=', crossorigin='anonymous')
 	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css', integrity='sha256-7O1DfUu4pybYI7uAATw34eDrgQaWGOfMV/8erfDQz/Q=', crossorigin='anonymous')
-	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.snow.min.css', integrity='sha256-qc/vMbPSg7/JfxMwKeMv3wlx7ojG33FXfYfO0UJIsc0=', crossorigin='anonymous')
+
+	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/simplemde/1.11.2/simplemde.min.css', integrity='sha256-Is0XNfNX8KF/70J2nv8Qe6BWyiXrtFxKfJBHoDgNAEM=', crossorigin='anonymous')
 	link(rel='stylesheet' href='/css/app.css')
 	
-	script(src='https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.min.js', integrity='sha256-3oYBiGm16EW9wQH8G1VhGh43XgivbO5KaB10RhA9phE=', crossorigin='anonymous')
+	script(src='https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js', integrity='sha256-RguSWIp8xU7Pb8DOP9LlaypP8KkExzz6VuG0wtkNig0=', crossorigin='anonymous')
+	script(src='https://cdnjs.cloudflare.com/ajax/libs/simplemde/1.11.2/simplemde.min.js', integrity='sha256-6sZs7OGP0Uzcl7UDsLaNsy1K0KTZx1+6yEVrRJMn2IM=', crossorigin='anonymous')
