--- a/views/login/login.pug
+++ b/views/login/login.pug
@@ -13,7 +13,7 @@ block content
       form(method='post', action='/login')
         .field
           .control.has-icons-left
-            input.input.is-large(type='email' name='email' placeholder='Email')
+            input.input.is-large(type='text' name='username' placeholder='Email')
             span.icon.is-large.is-left
               i.icon-envelope
 
