--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -12,7 +12,7 @@ nav.navbar.is-primary.is-fixed-top.is-boxed(role='navigation', aria-label='navig
         #navbarMenu.navbar-menu
             if user && user.terms == true && session.verified == true
                 .navbar-start
-                    a.navbar-item(href='/market')
+                    a.navbar-item(href='/browse')
                         span.icon.is-large
                             i.icon-basket.is-size-5
                         span.is-size-5 Browse
