--- a/views/items/new.pug
+++ b/views/items/new.pug
@@ -75,11 +75,11 @@ block content
 
 					.field.is-horizontal
 						.field-label.is-normal
-							label.label Content
+							label.label Overview
 						.field-body
 							.field
 								.control
-									textarea.textarea.is-medium.is-fullwidth(name='content' id='content')
+									textarea.textarea.is-medium.is-fullwidth(name='overview' id='overview')
 
 					.field.is-horizontal
 						.field-label.is-normal
@@ -131,11 +131,11 @@ block content
 
 					.field.is-horizontal
 						.field-label.is-normal
-							label.label Content
+							label.label Overview
 						.field-body
 							.field
 								.control
-									textarea.textarea.is-medium.is-fullwidth(name='contentReview' id='contentReview' disabled)
+									textarea.textarea.is-medium.is-fullwidth(name='overviewReview' id='overviewReview' disabled)
 
 					.field.is-horizontal
 						.field-label.is-normal
@@ -168,13 +168,13 @@ block content
 
 	script.
 		const editor = new SimpleMDE({
-			element: document.getElementById('content'),
+			element: document.getElementById('overview'),
 			forceSync: true,
 			spellChecker: false
 		})
 
 		const reviewEditor = new SimpleMDE({
-			element: document.getElementById('contentReview'),
+			element: document.getElementById('overviewReview'),
 			toolbar: false,
 			status: false,
 			spellChecker: false
@@ -193,7 +193,7 @@ block content
 					document.getElementById('priceReview').value = document.getElementById('price').value
 					document.getElementById('licenseReview').value = document.getElementById('license').value
 
-					reviewEditor.value(document.getElementById('content').value)
+					reviewEditor.value(document.getElementById('overview').value)
 					reviewEditor.togglePreview()
 				}
 				else if(t === 4) {
