--- a/views/public/item/index.pug
+++ b/views/public/item/index.pug
@@ -13,7 +13,7 @@ block content
 				h1.title=item.price
 				a.button.is-success.is-fullwidth.has-text-weight-bold(href='/purchase/' + item.id) Purchase
 
-			.box.has-background-white.has-text-centered
+			.box.has-background-white
 				table.table.is-fullwidth.is-responsive
 					tbody
 						tr
