--- a/views/dashboard/index.pug
+++ b/views/dashboard/index.pug
@@ -3,7 +3,7 @@ extends ../includes/layout_default
 block content
 	.level
 		.level-left
-			h1.is-size-3.title.is=title
+			h1.is-size-4.title.is=title
 		.level.-right
 	.columns
 		.column
@@ -24,5 +24,12 @@ block content
 
 		.column
 			.box.has-background-white
+
+
+	br
+	
+	h1.is-size-4.title.is Balance History
+	.box.has-background-white
+
 
 	include includes/modals
