--- a/views/items/index.pug
+++ b/views/items/index.pug
@@ -35,5 +35,5 @@ block content
 										i.icon-options
 			if items && items.length <= 0
 				p.has-text-centered
-					| You have zero items. Get started by <a href='/items/new'> adding one</a>.
+					| You have publihed zero items. Get started by <a href='/items/new'> submitting one</a>.
 				br
