--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,5 @@
 head
-	title #{title} | TRTL Services
+	title #{title} | Swanson World
 	link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css', integrity='sha256-2pUeJf+y0ltRPSbKOeJh09ipQFYxUdct5nTY6GAXswA=', crossorigin='anonymous')
 	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-badge@2.0.0/dist/css/bulma-badge.min.css', integrity='sha256-I+C/Eup4TsatVcYF2m9S9U+J9HQTr4m58RqWwXwzbTo=', crossorigin='anonymous')
 	link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma-switch@2.0.0/dist/css/bulma-switch.min.css', integrity='sha256-jCV/cXwP13w0GNHLgFx6SFgTNAvJPvS5MIhuE30Ng08=', crossorigin='anonymous')
