--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -3,7 +3,7 @@ nav.navbar.is-primary.is-fixed-top.is-boxed(role='navigation', aria-label='navig
         .navbar-brand
             a.navbar-item.is-size-4.has-text-weight-light.has-background-white.has-text-dark(href='/')
                 div(style='background-image:url("/img/logo.png");background-repeat:no-repeat;background-position:left;padding: 0 0 0 48px;')
-                    | TRTL Me
+                    | Swanson World
             span.navbar-burger.burger(data-target='navbarMenu')
                 span
                 span
