--- a/views/public/browse/includes/sidebar.pug
+++ b/views/public/browse/includes/sidebar.pug
@@ -1,8 +1,4 @@
-h1.subtitle Popular
-.box.has-background-white.is-paddingless
-    table.table.is-fullwidth.is-responsive.is-size-5
-        tbody
-            each item in popular
-                tr
-                    td.is-size-5
-                        a(href='/view/' + item.id)=item.name
+h1.title Popular
+each item in popular
+    .box.has-background-white.has-text-centered
+        a(href='/view/' + item.id)=item.name
