--- a/views/public/index.pug
+++ b/views/public/index.pug
@@ -9,7 +9,7 @@ html
 			.hero-body
 				.container.is-desktop(style='min-height:314px;background-image:url("/img/swanson/350/Computing.png");background-repeat:no-repeat;background-position:right;')
 					div(style='max-width: 60%;')
-						h1.title.is-size-1(style='line-height:1.5;') Turtle Me
+						h1.title.is-size-1(style='line-height:1.5;') Swanson World
 						h1.subtitle.is-size-2.has-text-weight-light.has-background-white(style='line-height:1.4;padding:15px;')
 							| A virtual marketplace for creatives to sell and buy services with TurtleCoin. 
 						
