webhook receive fix

--- a/views/public/item/index.pug
+++ b/views/public/item/index.pug
@@ -10,7 +10,7 @@ block content
 		
 		.column.is-one-third
 			.box.has-background-white.has-text-centered
-				.tooltip.is-tooltip-top(data-tooltip='Fees Included')
+				.tooltip.is-tooltip-top(data-tooltip='Excluding Fees')
 					h1.title=item.price
 				
 				br
